2006-10-12  Thomas Keller <me@thomaskeller.biz>

	* automate.cc: replaced std::endl in favour of simple unix
	unix line endings which is useful if these commands are used
	over automate stdio (flushing is expensive...)

2006-10-03  Evan Deaubl  <evan@warpedview.com>

	* monotone.cc, options_list.hh: Added ability to specify
	multiple --message arguments.
	* monotone.texi: Added documentation for multiple --message
	arguments.
	* tests/multiple_message_commit/__driver__.lua, testsuite.lua:
	Added integration test for multiple --message arguments.
	
2006-10-09  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 35 fuzzies cleared,

2006-10-04  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc: Fix automate inventory.
	"workspace_inventory" test should be named "automate_inventory".

2006-10-03  Timothy Brownawell  <tbrownaw@gmail.com>

	* visualc/lua.vcproj visualc/monotone.vcproj: Make it build again.

2006-09-29  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/workspace_inventory/__driver__.lua: This test has been
	broken since efe5767b8eebbc5440f543a08b8a3521e760a02a ; added files
	should also be marked as patched.

2006-09-26  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl: Change the default monotone program
	from "monotone" to "mtn".

2006-09-26  Matt Johnston  <matt@ucc.asn.au>

	* cmd_netsync.cc (CMD(push/sync)): don't require a -k
    argument for a non-authed transport.

2006-09-26  Matt Johnston  <matt@ucc.asn.au>

	* cmd_ws_commit.cc (CMD(commit)): fail early if a key
	wasn't set.

2006-09-26  Marcel van der Boom  <marcel@hsdev.com>

	* lua_hooks.cc (hook_validate_commit_message): Add a branchname
	argument.
	* cmd_ws_commit.cc (commit): Pass it.
	* monotone.texi (Hooks): Document it.
	* tests/commit_validation_lua_hook/commit_validate.lua: Test it.

2006-09-25  Thomas Moschny  <thomas.moschny@gmx.de>

	* contrib/monotone.zsh_completion: Applied a patch by Bruce