@@ -1,3 +1,8 @@
+2006-10-31  Benoît Dejean  <benoit@placenet.org>
+
+	* std_hooks.lua (ignore_file): Fixed many patterns.
+	Also added gettext and intltool related patterns.
+
 2006-10-12  Thomas Keller <me@thomaskeller.biz>
 
 	* automate.cc: replaced std::endl in favour of simple unix
